--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,10 @@
         />
         %sveltekit.head%
     </head>
-    <body data-sveltekit-preload-data="hover" class="bg-zinc-900">
+    <body
+        data-sveltekit-preload-data="hover"
+        class="bg-zinc-900 min-h-screen flex flex-col"
+    >
         <div style="display: contents">%sveltekit.body%</div>
     </body>
 </html>
