removed uneeded fonts + preloaded fonts

--- a/src/app.html
+++ b/src/app.html
@@ -7,10 +7,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800;900&display=swap"
-            rel="stylesheet"
+            rel="preload"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+            as="style"
+            onload="this.onload=null;this.rel='stylesheet'"
         />
-        <!-- TODO: Remove uneeded fonts -->
         %sveltekit.head%
     </head>
     <body
