--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%sveltekit.assets%/favicon.png" />
         <meta name="viewport" content="width=device-width" />
+
+        <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -12,6 +14,7 @@
             as="style"
             onload="this.onload=null;this.rel='stylesheet'"
         />
+
         %sveltekit.head%
     </head>
     <body
